plugins {
    id 'java'
    id 'maven'
    id 'maven-publish'
}

repositories {
    mavenCentral()
    mavenLocal()
}

sourceCompatibility = 1.8

group = 'org.opencadc'

version = '1.3.36'

description = 'OpenCADC User+Group server library'
def git_url = 'https://github.com/opencadc/ac'

dependencies {
    compile 'org.jdom:jdom2:[2.0.6,3.0)'
    compile 'org.json:json:20160212'
    compile 'xerces:xercesImpl:[2.12,3.0)'
    compile 'com.unboundid:unboundid-ldapsdk:[2.3,3.0)'
    compile 'io.jsonwebtoken:jjwt-api:0.11.5'
    compile 'io.jsonwebtoken:jjwt-impl:0.11.5'
    compile 'io.jsonwebtoken:jjwt-jackson:0.11.5'
    compile 'com.nimbusds:nimbus-jose-jwt:[9.22,)'

    compile 'org.opencadc:cadc-gms:[1.0.5,2.0)'
    compile 'org.opencadc:cadc-access-control:[1.1.23,2.0)'
    compile 'org.opencadc:cadc-util:[1.10,2.0)'
    compile 'org.opencadc:cadc-log:[1.1.0,)'
    compile 'org.opencadc:cadc-uws:[1.0,)'
    compile 'org.opencadc:cadc-uws-server:[1.2.4,)'

    testCompile 'junit:junit:[4.0,)'
    testCompile 'org.easymock:easymock:3.6'
    testCompile 'org.skyscreamer:jsonassert:[1.0,)'
}
